<resources>
    <string name="app_name">HomeFix</string>
    <string name="apikey_dev"></string>
    <string name="apikey_prod"></string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_home">Home</string>
    <string name="action_recent_jobs">Recent Jobs</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_profile">Profile</string>
    <string name="action_choose_day">Choose Day</string>
    <string name="action_week_view"># Days</string>
    <string name="action_one_day">1 day</string>
    <string name="action_three_days">3 days</string>
    <string name="action_five_days">5 days</string>
    <string name="action_seven_days">7 days</string>
    <string name="action_today">Today</string>
    <string name="action_options">Options</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_recent">Recent Jobs</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Logout</string>

    <!-- Labels -->
    <string name="name">Name</string>
    <string name="select_job_type">Select job type</string>
    <string name="location">Location</string>
    <string name="add_location">Add Location</string>
    <string name="email">Email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="property_type">Person\'s property relationship</string>
    <string name="phone_number">Phone Number</string>
    <string name="name_or_description">Name\/Description</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="add_description">Add Description</string>
    <string name="description">Description</string>
    <string name="charges">Charges</string>
    <string name="customer_invoice">Customer Invoice</string>
    <string name="payments">Payments</string>
    <string name="total">Total</string>
    <string name="total_cost">Total Cost</string>
    <string name="owed">Owed</string>
    <string name="paid">Paid</string>
    <string name="balance">Balance</string>
    <string name="remaining">Remaining</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="markup">Markup</string>
    <string name="markup_hint">Markup\/Discount (0-100\%)</string>
    <string name="tradesman_name">Tradesman Name</string>
    <string name="personal_info">Personal Info</string>
    <string name="home_phone">Home Phone</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="address">Address</string>
    <string name="home_address">Home Address</string>
    <string name="stats">Stats</string>
    <string name="years_experience">Years Experience</string>
    <string name="total_hours_worked">Total Hours Worked</string>
    <string name="total_hours_worked_this_week">Total hours worked this week</string>
    <string name="work_areas">Work Areas</string>
    <string name="action_done">Done</string>
    <string name="current_job">Current Job</string>
    <string name="next_job">Next Job</string>
    <string name="action_refresh">Refresh</string>
    <string name="job_type">Job Type</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="customer_property_relationship">Customer Property Relationship</string>
    <string name="add_availability">Add Availability</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="add_own_job">Add Own Job</string>
    <string name="need_an_account">Need an account?</string>

    <string-array name="payment_types">
        <item>cash</item>
        <item>card</item>
        <item>cheque</item>
        <item>bank_transfer</item>
    </string-array>

</resources>
