<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="false"
            android:title="@string/action_home" />

        <item
            android:id="@+id/calendar"
            android:checked="false"
            android:title="@string/action_calendar" />

        <item
            android:id="@+id/recent"
            android:checked="false"
            android:title="@string/action_recent" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/help"
            android:checked="false"
            android:title="@string/action_help" />

    </group>
</menu>