<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/base_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/base_padding"
            android:paddingTop="@dimen/base_padding">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/base_padding_ten"
                android:layout_height="@dimen/base_padding_ten"
                fresco:failureImage="@drawable/ic_account_grey600_48dp"
                fresco:placeholderImage="@color/colorPrimary"
                fresco:roundAsCircle="true"
                fresco:roundingBorderColor="@color/colorPrimaryDark"
                fresco:roundingBorderWidth="@dimen/base_padding_half" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextTheme.ExtraLarge" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="@dimen/base_padding"
            android:background="@drawable/horizontal_shadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/base_padding"
            android:paddingStart="@dimen/base_padding">

            <!-- Personal Info -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base_padding"
                android:background="@drawable/shadow_box_white_rounded_bordered"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/base_padding"
                    android:text="@string/personal_info"
                    android:textAppearance="@style/SingleLineTheme.Large.Bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/light_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/base_padding">

                    <!-- Email -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_padding_quarter"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/email" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="@dimen/base_padding"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <!-- Home Phone -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_padding_quarter"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/home_phone" />

                        <TextView
                            android:id="@+id/home_phone"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="@dimen/base_padding"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <!-- Mobile Phone -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_padding_quarter"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/mobile_phone" />

                        <TextView
                            android:id="@+id/mobile_phone"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="@dimen/base_padding"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <!-- Address -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/base_padding_quarter"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/address" />

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="@dimen/base_padding"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- Stats -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base_padding"
                android:background="@drawable/shadow_box_white_rounded_bordered"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/base_padding"
                    android:text="@string/stats"
                    android:textAppearance="@style/SingleLineTheme.Large.Bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/light_grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/base_padding">

                    <!-- Years Experience -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/years_experience"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="@dimen/base_padding"
                            android:text="@string/years_experience" />
                    </LinearLayout>

                    <!-- Total hours worked -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/total_hours_worked"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="@dimen/base_padding"
                            android:text="@string/total_hours_worked" />
                    </LinearLayout>

                    <!-- Total hours worked this week -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/total_hours_worked_this_week"
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="@dimen/base_padding"
                            android:text="@string/total_hours_worked_this_week" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- Work Areas -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/base_padding"
                android:background="@drawable/shadow_box_white_rounded_bordered"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/base_padding"
                    android:text="@string/work_areas"
                    android:textAppearance="@style/SingleLineTheme.Large.Bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/light_grey" />

                <TextView
                    android:id="@+id/work_areas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/base_padding"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
